--- a/deployment/indexer/Dockerfile
+++ b/deployment/indexer/Dockerfile
@@ -1,6 +1,6 @@
 FROM rust
 COPY . .
 RUN ls -ll
-RUN ["chmod", "+x", "index-manager-main"]
+RUN ["chmod", "+x", "target/release/index-manager-main"]
 RUN ls -ll
-CMD ./index-manager-main
+CMD ./target/release/index-manager-main
