--- a/.github/workflows/tag.workflow.yml
+++ b/.github/workflows/tag.workflow.yml
@@ -1,18 +1,16 @@
 name: Workflow for Tag
 
 on:
-  push:
-    branches: [ master ]
-
-# on:
-#   create:
-#     tags:
-#       - v*
+  create:
+    branches:
+      - "!*"
+    tags:
+      - "v*"
 
 jobs:
   #################
   # Running build #
-  ################# 
+  #################
   build-cargo:
     name: Build Chain Reader & Indexer
     env:
@@ -43,12 +41,12 @@ jobs:
 
       - name: List release files
         run: ls -ll target/release
-      - name: Upload chain-reader artifact 
+      - name: Upload chain-reader artifact
         uses: actions/upload-artifact@v2
         with:
           name: chain-reader
           path: target/release/chain-reader
-      - name: Upload indexer artifact 
+      - name: Upload indexer artifact
         uses: actions/upload-artifact@v2
         with:
           name: index-manager-main
@@ -56,9 +54,9 @@ jobs:
 
   ##################
   # Running docker #
-  ################## 
+  ##################
   docker-chain-reader:
-    needs: [build-cargo] 
+    needs: [build-cargo]
     name: Docker chain reader
     runs-on: ubuntu-latest
     steps:
@@ -79,12 +77,12 @@ jobs:
         with:
           name: chain-reader
           path: target/release/chain-reader
-
-      - name: Allow chain-reader binary to be executable
+      - name: Allow binary to be executable
         run: sudo chmod +x target/release/chain-reader/chain-reader
-
       - name: Get our docker file to the main source
         run: cp deployment/chain-reader/Dockerfile Dockerfile
+      - name: Remove the .dockerignore file if it exists because we need the /target folder in prod
+        run: rm -f -- .dockerignore
       - name: List files
         run: ls -ll
       - name: Build and push image
@@ -96,7 +94,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   docker-indexer:
-    needs: [build-cargo] 
+    needs: [build-cargo]
     name: Docker indexer
     runs-on: ubuntu-latest
     steps:
@@ -117,12 +115,12 @@ jobs:
         with:
           name: index-manager-main
           path: target/release/index-manager-main
-
-      - name: Allow index-manager-main binary to be executable
+      - name: Allow binary to be executable
         run: sudo chmod +x target/release/index-manager-main/index-manager-main
-
       - name: Get our docker file to the main source
-        run: cp deployment/indexer/Dockerfile Dockerfile
+        run: cp deployment/index-manager/Dockerfile Dockerfile
+      - name: Remove the .dockerignore file if it exists because we need the /target folder in prod
+        run: rm -f -- .dockerignore
       - name: List files
         run: ls -ll
       - name: Build and push image
@@ -158,29 +156,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-  docker-dashboard:
-    name: Docker dashboard
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-        with:
-          images: sprise/dashboard
-      - name: Get our docker file to the main source so we have the massbitprotcol app context
-        run: cp deployment/dashboard/Dockerfile Dockerfile
-      - name: Build and push image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          
